--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "Rutazz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "axios": "^1.6.4",
     "core-js": "^3.8.3",
+    "firebase": "^10.8.0",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "vue": "^3.2.13",
     "vue-router": "4",
     "vuex": "^4.0.2"
